# mononocle

./: package.nix  shell.md
source/: Cargo.toml
source/compositor/: Cargo.toml
source/compositor/src/: handlers.rs  ipc_server.rs  main.rs  state.rs
source/ctl/: Cargo.toml
source/ctl/src/: main.rs
source/ipc/: Cargo.toml
source/src/: ipc.rs  lib.rs
source/src/compositor/: config.rs  handlers.rs  ipc_server.rs  mod.rs  state.rs
