[package]
name = "mononocle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mononocle"
path = "src/bin/mononocle.rs"

[[bin]]
name = "mononocli"
path = "src/bin/mononocli.rs"

[dependencies]
glove = { version = "0.5.1", features = ["unix"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aargvark = { version = "0.9.6", features = ["serde_json"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "backend_egl",
    "desktop",
    "renderer_gl",
    "wayland_frontend",
]
