[package]
name = "mononocle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mononocle"
path = "src/main.rs"

[dependencies]
mononocle-ipc = { path = "../ipc" }
aargvark = { version = "0.9.6", features = ["serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "backend_egl",
    "desktop",
    "renderer_gl",
    "wayland_frontend",
]
