[package]
name = "mononocle-ctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mononocle-ctl"
path = "src/main.rs"

[dependencies]
mononocle-ipc = { path = "../ipc" }
aargvark = { version = "0.9.6", features = ["serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "time"] }
